Fix Beamer button making tabs content longer than it should on mobiles
[MAILPOET-2775]

--- a/assets/css/src/components/_tabs.scss
+++ b/assets/css/src/components/_tabs.scss
@@ -1,4 +1,5 @@
 .mailpoet-tabs {
+  clear: both;
   position: relative;
   z-index: 1;
 }
